--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Rock Paper Scissors</h1>
     <div class="choices">
       <div class="choice" id="Rock">
-        <img src="stone.jpg" />
+        <img src="./images/stone.jpg" />
         <div class="name">Rock</div>
       </div>
       <div class="choice" id="Paper">
-        <img src="papper.jpg" />
+        <img src="./images/papper.jpg" />
         <div class="name">Paper</div>
       </div>
       <div class="choice" id="Scissors">
-        <img src="scissor.jpg" />
+        <img src="./images/scissor.jpg" />
         <div class="name">Scissor</div>
       </div>
     </div>
